[package]
name = "nbb_markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nbb_config = { path = "../nbb_config" }

tracing = "0.1"
dashmap = "5.1"
comrak = "0.12"
tokio = { version = "1.15", features = ["full"] }
once_cell = { version = "1.9.0", features = ["parking_lot"] }
blake2 = { version = "0.10", features = ["simd_opt"] }
