[package]
name = "nbb_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nbb_config = { path = "../nbb_config" }
nbb_consts = { path = "../nbb_consts" }

tera = "1.15"
once_cell = { version = "1.9", features = ["parking_lot"] }
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3"
parking_lot = "0.11"
