[package]
name = "nbb_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nbb_config = { path = "../nbb_config" }
nbb_markdown = { path = "../nbb_markdown" }
nbb_renderer = { path = "../nbb_renderer" }
nbb_consts = { path = "../nbb_consts" }

tracing = "0.1"
axum = "0.6"
tokio = { version = "1.37", features = ["full"] }
hyper = "0.14"
tokio-stream = { version = "0.1", features = ["net"] }
tower-http = { version = "0.3", features = ["fs", "trace"] }
mime_guess = "2.0"
